# Vicsek_Model

./: .gitignore  CMakeLists.txt  Main.cpp  README.md
src/: main.cpp  main_SoA.cpp  old_main.cpp
